    * Added endpoint for abort current download process
    * Require user attention after each print, even failed ones (if enabled)
    * Added checked and finished flags to api/printer
    * Added states structure to api/connection endpoint
    * Added Connect configuration info to api/connection endpoint
    * Added connection.py with api/connection GET, POST endpoints
    * Added api/setting GET endpoint
    * Added m_timestamp to SDCard files properties

0.4.0 (2021-04-13)
    * getting IP refactoring
    * fix firmware version reading
    * working download gcode endpoint
    * command argument for profiling application
    * connection over VPN fix
    * Added additional network info

0.3.0 (2021-03-30)

    * Fixed broken command resends
    * Fixed state changed handler
    * Added new endpoint /api/connections with JSON response
    * Skipped pidfile when process is not alive
    * Added new endpoint /api/printer with JSON response
    * Fixed complaint in wizard about `api-key` when `username` was too short
    * Fix printer.sn being unset in the wizard by waiting for it
    * Fixed some telemetry being sent basically at random
    * Enabled the RESET_PRINTER command
    * Fixed printer resetting multiple times when it gets reset mid-print
    * Fixed accidentally hogging CPU when displaying LCD messages
    * Set log levels by module name in config or as command arguments
    * Report whether the current job is from the SD or not
    * Support long file names in the upcoming 3.10 release (file explorer only)
    * Added new endpoint /api/files with JSON response
    * Added new endpoint /api/job with JSON response
    * Added support for the new C parameter in M155
    * Modification of /api/connection, files, printer and job endpoints
    * All files in data_dir (user's home by default)
    * Parse print info from the file name (for SD files)
    * Introduce ErrorState(s) from SDK